show message if users money was received
